<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="translation_version">7</string>
    <string name="app_name">Nextcloud SMS</string>
    <string name="account_type" translatable="false">fr.unix_experience.owncloud_sms</string>
    <string name="account_authority" translatable="false">fr.unix_experience.owncloud_sms.datasync.provider</string>
    <string name="slowsync_account_authority" translatable="false">fr.unix_experience.owncloud_sms.datasync.slowsync_provider</string>
    <string name="target_package" translatable="false">fr.unix_experience.owncloud_sms</string>
    <string name="login_logo">Login logo</string>
    <string name="shared_preference_file" translatable="false">ownCloudSMSPrefs</string>
    <string name="pref_lastmsgdate" translatable="false">last_message_date</string>
    <string name="pref_title_sync">SMS - Fast</string>
    <string name="pref_title_sync_frequency">Fast Sync frequency</string>
    <string name="pref_title_slow_sync">SMS - Slow and Secure</string>
    <string name="pref_title_slow_sync_frequency">Secure Slow Sync frequency</string>
    <string name="action_settings">Settings</string>
    <string name="sync_now">Synchronize now</string>
    <string name="pref_category_sync">Synchronization</string>
    <string name="title_global_pref_to_general_prefs">General preferences</string>
    <string name="summary_global_pref_to_general_prefs">Sync options</string>
    <string name="summary_notif_prefs">Notifications</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="title_activity_general_settings">General Settings</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values" translatable="false">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_sync_bulk_max_messages_titles">
        <item>100 SMS</item>
        <item>1000 SMS</item>
        <item>2000 SMS</item>
        <item>5000 SMS</item>
        <item>10000 SMS</item>
        <item>25000 SMS</item>
        <item>Every SMS not synced</item>
    </string-array>
    <string-array name="pref_sync_bulk_max_messages" translatable="false">
        <item>100</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
        <item>25000</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_slow_sync_frequency_titles">
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_slow_sync_frequency_values" translatable="false">
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>720</item>
        <item>1440</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_minimum_sync_chars_titles" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string-array name="pref_minimum_sync_chars" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <string name="setting_push_on_receive" translatable="false">push_on_receive</string>
    <string name="setting_show_sync_notifications" translatable="false">show_sync_notifications</string>
    <string name="setting_sync_wifi" translatable="false">sync_wifi</string>
    <string name="setting_sync_4g" translatable="false">sync_4g</string>
    <string name="setting_sync_3g" translatable="false">sync_3g</string>
    <string name="setting_sync_gprs" translatable="false">sync_gprs</string>
    <string name="setting_sync_2g" translatable="false">sync_2g</string>
    <string name="setting_sync_others" translatable="false">sync_others</string>
    <string name="setting_sync_frequency" translatable="false">sync_frequency</string>
    <string name="setting_sync_bulk_messages" translatable="false">sync_bulk_messages</string>
    <string name="setting_minimum_sync_chars" translatable="false">minimum_sync_chars</string>
    <string name="pref_push_on_receive">Push SMS on reception</string>
    <string name="pref_sync_wifi">Synchronize in Wi-Fi</string>
    <string name="pref_sync_4g">Synchronize in 4G</string>
    <string name="pref_sync_3g">Synchronize in 3G</string>
    <string name="pref_sync_gprs">Synchronize in 2.5G (GPRS)</string>
    <string name="pref_sync_2g">Synchronize in 2G</string>
    <string name="pref_sync_others">Synchronize in other modes</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">Login or password incorrect</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_serverURI">Server address</string>
    <string name="error_invalid_server_address">Invalid server address</string>
    <string name="error_connection_failed">Connection failed, ensure this is the right server</string>
    <string name="error_http_connection_failed">Unable to perform a HTTP connection. Please ensure there is a web server</string>
    <string-array name="protocol_array" translatable="false">
        <item>https://</item>
        <item>http://</item>
    </string-array>
    <string name="ma_title_rate_us">Rate us!</string>
    <string name="ma_title_add_account">Add an account</string>
    <string name="ma_title_welcome">Welcome</string>
    <string name="ma_content_welcome">Welcome to the Nextcloud SMS application.\nThis application lets you synchronize your text messages (SMS) to a Nextcloud server.\n To get started, open the menu on the left  and choose "Add an account", then pick Nextcloud SMS and enter your server details.\n\n Note: the Nextcloud server must be running the <a href="https://apps.nextcloud.com/apps/ocsms">Phone Sync SMS app</a>. Please ensure the app is installed on your Nextcloud server or ask your server admin to install it. </string>
    <string name="ma_title_remote_account">Remote account</string>
    <string name="choose_account">Choose account</string>
    <string name="title_activity_select_account">Select account</string>
    <string name="title_activity_select_contact">Select contact</string>
    <string name="no_account_configured">No account configured.</string>
    <string name="sync_title">Sync process</string>
    <string name="sync_inprogress">Sync in progress …</string>
    <string name="fatal_error">Fatal error ! </string>
    <string name="notification_channel_name_default">Default</string>
    <string name="notification_channel_name_sync">Sync</string>
    <string name="err_sync_get_smslist">Error #1: Invalid data received from server when getting previous messages</string>
    <string name="err_sync_craft_http_request">Error #2: Error while crafting HTTP request</string>
    <string name="err_sync_push_request">Error #3: Push request failed</string>
    <string name="err_sync_push_request_resp">Error #4: Invalid data received from server when pushing data</string>
    <string name="err_sync_create_json_null_smslist">Error #5: NULL SMS List</string>
    <string name="err_sync_create_json_put_smslist">Error #6: Error while crafting push request</string>
    <string name="err_sync_create_json_request_encoding">Error #7: Unsupported encoding when generating request</string>
    <string name="err_sync_auth_failed">Error #8: Authentication failed</string>
    <string name="err_sync_http_request_returncode_unhandled">Error #9: Server set unhandled HTTP return code</string>
    <string name="err_sync_http_request_connect">Error #11: Unable to perform a connection to Nextcloud instance</string>
    <string name="err_sync_http_request_httpexception">Error #12: Unable to perform a connection to Nextcloud instance</string>
    <string name="err_sync_http_request_ioexception">Error #13: Unable to perform a connection to Nextcloud instance</string>
    <string name="err_sync_http_request_resp">Error #14: Unable to parse server response</string>
    <string name="err_sync_http_request_parse_resp">Error #15: Unable to parse server response</string>
    <string name="err_sync_no_connection_available">Error #16: No data connection available</string>
    <string name="err_sync_account_unparsable">Error #17: malformed account. Please reconfigure it</string>
    <string name="err_sync_ocsms_not_installed_or_oc_upgrade_required">Error #18: Nextcloud SMS app is not installed or Nextcloud awaiting for an upgrade</string>
    <string name="err_fetch_phonelist">Invalid phonelist received from server.</string>
    <string name="err_proto_v2">Server doesn\'t support this feature. Ensure server version is at least 1.6.</string>
    <string name="contactinfos_title">Contact informations</string>
    <string name="subtitle_contact_phones">- Contact phones</string>
    <string name="pref_title_bulk_messages">Max messages to send per sync</string>
    <string name="contactinfos_list">Contact list</string>
    <string name="function_not_available">This function is not available yet.</string>
    <string name="ui_notification_title_template">Nextcloud SMS: %1$s</string>
    <string name="communicate">Communicate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ma_title_my_accounts">My accounts</string>
    <string name="ma_content_swipeaction">Swipe from left to right to access to action menu.</string>
    <string name="cancel">Cancel</string>
    <string name="understood">Understood</string>
    <string name="notif_permission_required">Permissions required</string>
    <string name="notif_permission_required_content">Some permissions are missing to perform the sync process. Please fix it in app settings</string>
    <string name="please_fix_it">Please fix it.</string>
    <string name="pref_title_minimum_sync_chars">Minimum phonenumber length</string>
    <string name="launch_restore">Restore my SMS</string>
    <string name="error_make_default_sms_app">Please make this application default SMS application to permit restore your messages. This limitation has been introduced by Android 4.4.</string>
    <string name="fix_permissions">Fix permissions</string>
    <string name="restore_finished">SMS restoration is now finished.</string>
    <string name="x_messages_restored">messages restored&#8230;</string>
</resources>