<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2014-2015, Loic Blot <loic.blot@unix-experience.fr>
 * All rights reserved.
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions
 * are met:
 * 1. Redistributions of source code must retain the above copyright
 *    notice, this list of conditions and the following disclaimer.
 * 2. Redistributions in binary form must reproduce the above copyright
 *    notice, this list of conditions and the following disclaimer in the
 *    documentation and/or other materials provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY THE REGENTS AND CONTRIBUTORS ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
 * ARE DISCLAIMED.  IN NO EVENT SHALL THE REGENTS OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS
 * OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
 * HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT
 * LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
 * OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 */
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.unix_experience.owncloud_sms.activities.remote_account.RestoreMessagesActivity">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressbar_restore"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/error_make_default_sms_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/tv_error_default_smsapp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/holo_red_light"
        android:textAlignment="center"/>

    <Button
        android:text="@string/fix_permissions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_error_default_smsapp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:id="@+id/button_fix_permissions"
        style="@style/Widget.AppCompat.Button"/>

    <Button
        android:text="@string/launch_restore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_launch_restore"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:fontFamily="sans-serif-medium"
        android:layout_alignBaseline="@+id/button_fix_permissions"
        android:layout_alignBottom="@+id/button_fix_permissions"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/restore_finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_restore_finished"
        android:textSize="24sp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textAllCaps="false"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progressbar_restore"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_progress_value"
        android:text="@string/x_messages_restored"/>

</RelativeLayout>
